force-app/main/default/objects/Line_of_Credit__c/Line_of_Credit__c.object-meta.xml
<CustomObject>
    <label>Line of Credit</label>
    <nameField>
        <displayFormat>LOC-{000000}</displayFormat>
        <label>Line of Credit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lines of Credit</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>