force-app/main/default/objects/Line_of_Credit__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lines of Credit</relationshipLabel>
    <relationshipName>Lines_of_Credit</relationshipName>
    <type>Lookup</type>
</CustomField>