force-app/main/default/objects/Line_of_Credit__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Lines of Credit</relationshipLabel>
    <relationshipName>Lines_of_Credit</relationshipName>
    <type>Lookup</type>
</CustomField>