force-app/main/default/objects/Line_of_Credit__c/fields/Balance_Interest__c.field-meta.xml
<CustomField>
    <fullName>Balance_Interest__c</fullName>
    <label>Balance Interest</label>
    <summarizedField>Line_of_Credit_Transaction__c.Balance_Interest__c</summarizedField>
    <summaryForeignKey>Line_of_Credit_Transaction__c.Line_of_Credit__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>