force-app/main/default/objects/Line_of_Credit__c/fields/Collateral_Total__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Total__c</fullName>
    <label>Collateral Total</label>
    <summarizedField>Line_of_Credit_Collateral__c.Value__c</summarizedField>
    <summaryForeignKey>Line_of_Credit_Collateral__c.Line_of_Credit__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>