force-app/main/default/objects/Line_of_Credit__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Lines of Credit</relationshipLabel>
    <relationshipName>Lines_of_Credit</relationshipName>
    <type>Lookup</type>
</CustomField>