force-app/main/default/objects/Line_of_Credit__c/fields/Last_Interest_Charged__c.field-meta.xml
<CustomField>
    <fullName>Last_Interest_Charged__c</fullName>
    <label>Last Interest Charged</label>
    <type>Date</type>
</CustomField>