force-app/main/default/objects/Line_of_Credit__c/fields/Last_Payment_Made__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Made__c</fullName>
    <label>Last Payment Made</label>
    <type>Date</type>
</CustomField>