force-app/main/default/objects/Line_of_Credit__c/fields/Last_withdrawal_made__c.field-meta.xml
<CustomField>
    <fullName>Last_withdrawal_made__c</fullName>
    <label>Last withdrawal made</label>
    <type>Date</type>
</CustomField>