force-app/main/default/objects/Line_of_Credit__c/fields/Payment_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Payment_Remaining__c</fullName>
    <formula>Total_Withdrawal__c -  Total_Payment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>