force-app/main/default/objects/Line_of_Credit__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <label>Rate</label>
    <precision>9</precision>
    <required>true</required>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>