force-app/main/default/objects/Line_of_Credit__c/fields/Secured__c.field-meta.xml
<CustomField>
    <fullName>Secured__c</fullName>
    <formula>Collateral_Total__c &gt;=  Credit_Limit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secured</label>
    <type>Checkbox</type>
</CustomField>