force-app/main/default/objects/Line_of_Credit__c/fields/Total_Withdrawal__c.field-meta.xml
<CustomField>
    <fullName>Total_Withdrawal__c</fullName>
    <label>Total Withdrawal</label>
    <summarizedField>Line_of_Credit_Transaction__c.Withdrawal__c</summarizedField>
    <summaryFilterItems>
        <field>Line_of_Credit_Transaction__c.Type__c</field>
        <operation>equals</operation>
        <value>Withdrawal</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Line_of_Credit_Transaction__c.Reversed__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Line_of_Credit_Transaction__c.Line_of_Credit__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>