force-app/main/default/objects/Line_of_Credit__c/recordTypes/Business_Line_of_Credit.recordType-meta.xml
<RecordType>
    <fullName>Business_Line_of_Credit</fullName>
    <active>true</active>
    <label>Business Line of Credit</label>
</RecordType>