force-app/main/default/objects/Line_of_Credit__c/recordTypes/Personal_Line_of_Credit.recordType-meta.xml
<RecordType>
    <fullName>Personal_Line_of_Credit</fullName>
    <active>true</active>
    <label>Personal Line of Credit</label>
</RecordType>