force-app/main/default/objects/Line_of_Credit__c/validationRules/Credit_Limit_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Credit_Limit_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Credit_Limit__c &lt; Balance__c</errorConditionFormula>
    <errorDisplayField>Credit_Limit__c</errorDisplayField>
    <errorMessage>Please ensure Credit Limit Should be greater than or equal to Balance</errorMessage>
</ValidationRule>