force-app/main/default/objects/Line_of_Credit__c/validationRules/Status_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(Credit_Limit__c), CASE(Status__c, &quot;Cancelled&quot;,1,&quot;Closed&quot;,1,0)=1)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Credit Limit can increase only when the status is Active</errorMessage>
</ValidationRule>