force-app/main/default/objects/Line_of_Credit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Contact__c</columns>
    <columns>Account__c</columns>
    <columns>Balance__c</columns>
    <columns>Credit_Limit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>